--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -77,41 +77,40 @@
               <div class="mb-4">
                 <h3>Explore</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/discovery"><i class="bi bi-compass" title="compass"></i> Discovery</a>
+                  <a class="nav-link" href="/discovery"><i class="bi bi-compass me-2" title="compass"></i>Discovery</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/ranking"><i class="bi bi-trophy" title="crown"></i> Ranking</a>
+                  <a class="nav-link" href="/ranking"><i class="bi bi-trophy me-2" title="crown"></i>Ranking</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar" title="calendar"></i> Ranking calendar</a>
+                  <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar me-2" title="calendar"></i>Ranking calendar</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/newest"><i class="bi bi-stars" title="sparkling"></i> Newest</a>
+                  <a class="nav-link" href="/newest"><i class="bi bi-stars me-2" title="sparkling"></i>Newest</a>
                 </li>
               </div>
               <div class="mb-4">
               <h3>Your profile</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people" title="users"></i> Latest works by followed</a>
+                  <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people me-2" title="users"></i>Latest works by followed</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart" title="heart"></i> Your bookmarks</a>
+                  <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart me-2" title="heart"></i>Your bookmarks</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/self"><i class="bi bi-person" title="user"></i> Your profile</a>
+                  <a class="nav-link" href="/self"><i class="bi bi-person me-2" title="user"></i>Your profile</a>
                 </li>
               </div>
               <div class="mb-4">
               <h3>Settings & info</h3>
                 <li class="nav-item">
-                  <a class="nav-link" href="/settings"><i class="bi bi-gear" title="settings"></i> Settings</a>
+                  <a class="nav-link" href="/settings"><i class="bi bi-gear me-2" title="settings"></i>Settings</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about"><i class="bi bi-info-circle" title="about"></i> About</a>
+                  <a class="nav-link" href="/about"><i class="bi bi-info-circle me-2" title="about"></i>About</a>
                 </li>
                 <li class="nav-item">
-                  <!-- NOTE: seems to break this nav option -->
-                  <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe" title="globe"></i> Source code</a>
+                  <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe me-2" title="globe"></i>Source code</a>
                 </li>
               </div>
               </ul>
