--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-center">
   <h1 class="text-center mb-4">Newest works from all users</h1>
 
-  <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end mx-auto">
+  <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end mx-auto mb-4">
     {{- baseURL := "/newest" }}
     {{- paths := slice("", "?mode=r18") }}
     {{- names := slice("Safe", "R-18") }}
