--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -61,25 +61,29 @@
         <!-- Bookmark and like buttons -->
         <!-- TODO: there's probably a way to align these buttons along the top of the card *without breakage* -->
         <div class="col-12 col-xl-4 d-flex justify-content-start justify-content-xl-end align-items-center">
+          <div id="bookmark-button">
           {{- if isset(.BookmarkData) && LoggedIn }}
-          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap me-2" onclick="window.location.href='/self/deleteBookmark/{{ .BookmarkID }}'">
+          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap me-2" hx-post="/self/deleteBookmark/{{ .BookmarkID }}" hx-target="#bookmark-button" hx-swap="outerHTML">
             <i class="bi bi-heart-fill me-2"></i>Bookmarked
           </button>
           {{- else }}
-          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap me-2" onclick="window.location.href='/self/addBookmark/{{ .ID }}'">
+          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap me-2" hx-post="/self/addBookmark/{{ .ID }}" hx-target="#bookmark-button" hx-swap="outerHTML">
             <i class="bi bi-heart me-2"></i>Bookmark
           </button>
           {{- end }}
+          </div>
 
+          <div id="like-button">
           {{- if .Liked && LoggedIn}}
           <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap" disabled>
             <i class="bi bi-hand-thumbs-up-fill me-2"></i>Liked
           </button>
           {{- else }}
-          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap" onclick="window.location.href='/self/like/{{ .ID }}'">
+          <button type="button" class="btn custom-btn-secondary bg-charcoal-surface2 text-nowrap" hx-post="/self/like/{{ .ID }}" hx-target="#like-button" hx-swap="outerHTML">
             <i class="bi bi-hand-thumbs-up me-2"></i>Like
           </button>
           {{- end }}
+          </div>
         </div>
       </div>
 
