--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -75,6 +75,17 @@ h6 {
   font-weight: $font-weight-bold;
 }
 
+/// htmx
+.bookmark-spinner {
+  display: none;
+}
+.htmx-request .bookmark-spinner {
+  display: inline;
+}
+.htmx-request.bookmark-spinner {
+  display: inline;
+}
+
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
   --bs-body-color-rgb: rgb(245, 245, 245);
