--- a/assets/css/bootstrap-style.scss
+++ b/assets/css/bootstrap-style.scss
@@ -86,6 +86,16 @@ h6 {
   display: inline;
 }
 
+.like-spinner {
+  display: none;
+}
+.htmx-request .like-spinner {
+  display: inline;
+}
+.htmx-request.like-spinner {
+  display: inline;
+}
+
 /* [data-bs-theme="charcoal"] {
   --bs-body-color: #f5f5f5;
   --bs-body-color-rgb: rgb(245, 245, 245);
