clean up discovery pages

--- a/assets/views/blocks/switcher.jet.html
+++ b/assets/views/blocks/switcher.jet.html
@@ -18,6 +18,8 @@
     - Adds an icon (bi-circle-fill) for the active state
 
     This switcher can be used for tabbed navigation or toggling between different views.
+
+    Tip: For absolute URI paths, start the baseURL with a forward slash.
 *}
 
 {{- block Switcher(baseURL, paths, names, activeState) }}
