--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -4519,7 +4519,7 @@ textarea.form-control-lg {
   border-top: 0;
 }
 
-.card-body {
+.card-body, .custom-card-body {
   flex: 1 1 auto;
   padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
   color: var(--bs-card-color);
@@ -7665,7 +7665,7 @@ textarea.form-control-lg {
   border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
 }
 
-.border-0, .custom-card, .custom-btn-secondary, .custom-btn-secondary-flex {
+.border-0, .custom-card-body, .custom-card, .custom-btn-secondary, .custom-btn-secondary-flex {
   border: 0 !important;
 }
 
@@ -9177,7 +9177,7 @@ textarea.form-control-lg {
   border-radius: var(--bs-border-radius-xl) !important;
 }
 
-.rounded-5, .custom-card {
+.rounded-5, .custom-card-body, .custom-card {
   border-radius: var(--bs-border-radius-xxl) !important;
 }
 
@@ -12249,19 +12249,5 @@ h6, .h6 {
 .htmx-request.like-spinner {
   display: inline;
 }
-
-/* [data-bs-theme="charcoal"] {
-  --bs-body-color: #f5f5f5;
-  --bs-body-color-rgb: rgb(245, 245, 245);
-  --bs-body-bg: #1f1f1f;
-  --bs-body-bg-rgb: rgb(31, 31, 31);
-  --bs-secondary-color: #d6d6d6;
-  --bs-secondary-color-rgb: rgb(214, 214, 214);
-  --bs-secondary-bg: #e9ecef;
-  --bs-secondary-bg-rgb: 233, 236, 239;
-  /// --bs-tertiary-bg: #f8f9fa;
-  --bs-tertiary-bg-rgb: rgba(255,255,255,0.12);
-  --bs-link-color: rgb(102, 159, 194);
-} */
 
 /*# sourceMappingURL=bootstrap-style.css.map */
