--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -1,18 +1,18 @@
 {{- extends "layout/default" }}
 {{- import "blocks/underlinenav" }}
 {{- block body() }}
-<div class="row justify-content-center">
-  <h1 class="text-center mb-4">Newest works from all users</h1>
-
-  <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end mx-auto mb-4">
-    {{- baseURL := "/newest" }}
-    {{- paths := slice("", "?mode=r18") }}
-    {{- names := slice("Safe", "R-18") }}
-    {{- activeState := isset(Queries.mode) ? "?mode=" + Queries.mode : "" }}
-    {{- yield UnderlineNav(baseURL=baseURL, paths=paths, names=names, activeState=activeState) }}
-  </div>
+<div class="row justify-content-center g-4">
+  <h1 class="text-center">Newest works from all users</h1>
 
   <div class="col-12">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end mx-auto mb-4">
+      {{- baseURL := "/newest" }}
+      {{- paths := slice("", "?mode=r18") }}
+      {{- names := slice("Safe", "R-18") }}
+      {{- activeState := isset(Queries.mode) ? "?mode=" + Queries.mode : "" }}
+      {{- yield UnderlineNav(baseURL=baseURL, paths=paths, names=names, activeState=activeState) }}
+    </div>
+
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
       {{ include "fragments/small-tn" .Items }}
     </div>
